# YOLO-automation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  automate_ci_task.py  automate_cii_task.py  automate_task_i.py  load_zip_file.py  requirements.txt  run_YOLO_model.py  start.sh  things.yaml  yolov5.cpp  yolov5.py
.github/workflows/: cmake-single-platform.yml  python-script-conda.yml
utils/: analyze_results.py  gen_utils.py  img_inference.py  log_utils.py  vis_utils.py
